--- a/Copy_of_Февральский_курс_Pro_Занятие_1_Распознавание_рукописных_цифр.ipynb
+++ b/Copy_of_Февральский_курс_Pro_Занятие_1_Распознавание_рукописных_цифр.ipynb
@@ -1647,7 +1647,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 187
         },
         "outputId": "b1047f1c-ec80-441d-bb11-3c8214a5bb03"
       },
@@ -1665,11 +1665,95 @@
           "output_type": "stream",
           "text": [
             "[[25, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.9532, 'test_acc = ', 0.9551]\n",
-            "[[50, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.963, 'test_acc = ', 0.9631]\n"
+            "[[50, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.963, 'test_acc = ', 0.9631]\n",
+            "[[100, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.9718, 'test_acc = ', 0.9727]\n",
+            "[[200, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.9757, 'test_acc = ', 0.9761]\n",
+            "[[400, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.9762, 'test_acc = ', 0.9795]\n",
+            "[[800, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.9796, 'test_acc = ', 0.98]\n",
+            "[[1600, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.9814, 'test_acc = ', 0.9819]\n",
+            "[[3200, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.9806, 'test_acc = ', 0.9811]\n",
+            "[[25, 25, 0, 'relu', 'softmax'], 'train_acc = ', 0.9565, 'test_acc = ', 0.9579]\n",
+            "[[50, 50, 0, 'relu', 'softmax'], 'train_acc = ', 0.9675, 'test_acc = ', 0.9677]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-NiiJnVKoUpy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Создаём 10 различных сетей с одним внутренним слоем\n",
+        "net = []\n",
+        "net.append([800, 800, 0, 'relu', 'softmax'])\n",
+        "net.append([800, 800, 0, 'elu', 'softmax'])\n",
+        "net.append([800, 800, 0, 'selu', 'softmax'])\n",
+        "net.append([800, 800, 0, 'softplus', 'softmax'])\n",
+        "net.append([800, 800, 0, 'softsign', 'softmax'])\n",
+        "net.append([800, 800, 0, 'tanh', 'softmax'])\n",
+        "net.append([800, 800, 0, 'sigmoid', 'softmax'])\n",
+        "net.append([800, 800, 0, 'hard_sigmoid', 'softmax'])\n",
+        "net.append([800, 800, 0, 'exponential', 'softmax'])\n",
+        "net.append([800, 800, 0, 'linear', 'softmax'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tWV7T9NXoU81",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RXxgVSS-oVHM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y0cYIds2oVTH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZidFPNZuoVQ9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
