--- a/Copy_of_Февральский_курс_Pro_Занятие_1_Распознавание_рукописных_цифр.ipynb
+++ b/Copy_of_Февральский_курс_Pro_Занятие_1_Распознавание_рукописных_цифр.ipynb
@@ -1647,7 +1647,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 323
         },
         "outputId": "b1047f1c-ec80-441d-bb11-3c8214a5bb03"
       },
@@ -1673,7 +1673,15 @@
             "[[1600, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.9814, 'test_acc = ', 0.9819]\n",
             "[[3200, 0, 0, 'relu', 'softmax'], 'train_acc = ', 0.9806, 'test_acc = ', 0.9811]\n",
             "[[25, 25, 0, 'relu', 'softmax'], 'train_acc = ', 0.9565, 'test_acc = ', 0.9579]\n",
-            "[[50, 50, 0, 'relu', 'softmax'], 'train_acc = ', 0.9675, 'test_acc = ', 0.9677]\n"
+            "[[50, 50, 0, 'relu', 'softmax'], 'train_acc = ', 0.9675, 'test_acc = ', 0.9677]\n",
+            "[[100, 100, 0, 'relu', 'softmax'], 'train_acc = ', 0.9737, 'test_acc = ', 0.9775]\n",
+            "[[200, 200, 0, 'relu', 'softmax'], 'train_acc = ', 0.9748, 'test_acc = ', 0.9779]\n",
+            "[[400, 400, 0, 'relu', 'softmax'], 'train_acc = ', 0.9756, 'test_acc = ', 0.977]\n",
+            "[[800, 800, 0, 'relu', 'softmax'], 'train_acc = ', 0.9767, 'test_acc = ', 0.9797]\n",
+            "[[1600, 1600, 0, 'relu', 'softmax'], 'train_acc = ', 0.9724, 'test_acc = ', 0.968]\n",
+            "[[3200, 3200, 0, 'relu', 'softmax'], 'train_acc = ', 0.9761, 'test_acc = ', 0.9792]\n",
+            "[[25, 25, 25, 'relu', 'softmax'], 'train_acc = ', 0.9561, 'test_acc = ', 0.9543]\n",
+            "[[50, 50, 25, 'relu', 'softmax'], 'train_acc = ', 0.9655, 'test_acc = ', 0.9666]\n"
           ],
           "name": "stdout"
         }
@@ -1687,7 +1695,7 @@
         "colab": {}
       },
       "source": [
-        "#Создаём 10 различных сетей с одним внутренним слоем\n",
+        "#Создаём 10 различных сетей с различными активационными функциями\n",
         "net = []\n",
         "net.append([800, 800, 0, 'relu', 'softmax'])\n",
         "net.append([800, 800, 0, 'elu', 'softmax'])\n",
